# ayanamist-bot-rs

./: .gitignore  Cargo.toml  config.toml.example  readme.md
src/: config.rs  greeter.rs  http.rs  logger.rs  main.rs  proxy.rs
src/proxy/: api.rs  command.rs  handler.rs
src/verify/: captcha.rs
